# shell

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conditional.cpp  conditional.h  main.cpp  shell.cpp  shell.h  utils.h
Conditions/: Conditions.cpp  Conditions.opensdf  Conditions.sln  README.md
Conditions/Conditions/: Conditions.h  Conditions.vcxproj  Conditions.vcxproj.filters  ReadMe.txt  in.txt  main.cpp
Conditions/Conditions/Debug/: vc120.idb
Conditions/Conditions/Debug/Conditions.tlog/: CL.read.1.tlog  CL.write.1.tlog  Conditions.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Conditions/ConditionsUnitTest/: ConditionsUnitTest.vcxproj  ConditionsUnitTest.vcxproj.filters  ConditonsTest.cpp  main.cpp
Conditions/ConditionsUnitTest/Debug/: vc120.idb
Conditions/ConditionsUnitTest/Debug/Conditio.58B596B7.tlog/: CL.read.1.tlog  CL.write.1.tlog  ConditionsUnitTest.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
Conditions/Debug/: Conditions.ilk  ConditionsUnitTest.exp  ConditionsUnitTest.ilk  ConditionsUnitTest.lib
Conditions/ipch/conditions-d8bf4f43/: conditions-9474d1e6.ipch
Grep/: Grep.cpp  Grep.h  Grep.sln  README.md
Grep/Debug/: Grep.ilk  GrepUnitTest.exp  GrepUnitTest.ilk  GrepUnitTest.lib  file2.txt  file3.txt
Grep/Grep/: Doxyfile  Grep.vcxproj  Grep.vcxproj.filters  ReadMe.txt  in.txt  main.cpp
Grep/Grep/Debug/: RCa00796  vc120.idb
Grep/GrepUnitTest/: GrepUnitTest.vcxproj  GrepUnitTest.vcxproj.filters  grep_test.cpp
Grep/GrepUnitTest/Debug/: vc120.idb
(+15 files in other folders)
